# memoria-rs

./: .gitignore  Cargo.toml  README.md
data/: items.txt
src/: main.rs
